# libReliableStream

./: CMakeLists.txt  Checksum.c  IO.c  Packet.c  Pipe.c  README.md  ReliableStream.c  ReliableStream.h
tests/: test-pipe.c  test.c
